# player

./: CMakeLists.txt  Makefile
include/: bk.h  libue.h  net_impl.h  play_list.h  player.h  player_input.h  player_notiy.h  player_opt.h  protocol.h  socket_observer  usb_scan.h
src/: main.c  net_impl.c  play_list.c  player.c  player_input.c  player_opt.c  player_opt.h  socket_observer.c  usb_scan.c  usb_scan_by_socket.c
test/: CMakeLists.txt  g_test_player_opt.c  input_test  input_test.c  play_list_test.c  socket_test.c  test  usb_scan_test.c
